makefile and updated the links

--- a/cv.tex
+++ b/cv.tex
@@ -528,11 +528,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
              {
                  \begin{itemize}[leftmargin=0.5cm]
                      \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
-                         \href{https://github.com/srijanshetty/udghosh-final}{https://github.com/srijanshetty/udghosh-final}
+                         \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
                      \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
                          \href{http://www.iitk.ac.in/hall5} {http://www.iitk.ac.in/hall5}
                      \item \textbf{ALI}: Antaragni Leadership Initiative.
-                         \href{http://www.antargni.in/ali} {http://www.antargni.in/ali}
+                         \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
                  \end{itemize}
              }
 
