--- a/cv.tex
+++ b/cv.tex
@@ -470,10 +470,10 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 \projectlist {Web Development}
              {
                  \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
-                         \href{https://github.com/srijanshetty/udghosh-final}{https://github.com/srijanshetty/udghosh-final}
-                     \item \textbf{ALI}: Antaragni Leadership Initiative.
-                         \href{http://www.antargni.in/ali} {http://www.antargni.in/ali}
+                     \item \textbf{Udghosh '13}: The annual sports-fest of IIT Kanpur.
+                         \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
+                     \item \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
+                         \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
                  \end{itemize}
              }
 
