--- a/cv.tex
+++ b/cv.tex
@@ -527,11 +527,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 \projectlist {Web Development}
              {
                  \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{Udghosh}: The annual sports-fest of IIT Kanpur.
+                     \item \textbf{Udghosh '13}: The annual sports-fest of IIT Kanpur.
                          \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
                      \item \textbf{Hall 5}: Fifth Hall of Residence, IIT Kanpur.
                          \href{http://www.iitk.ac.in/hall5} {http://www.iitk.ac.in/hall5}
-                     \item \textbf{ALI}: Antaragni Leadership Initiative.
+                     \item \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
                          \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
                  \end{itemize}
              }
