Changed the layout of work experience

--- a/cv.tex
+++ b/cv.tex
@@ -206,10 +206,13 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \section{Work Experience}
 
-\work {May-July 2014}
-      {Research Intern at \textsc{Microsoft Research India}, Bangalore}
+\cproject%
+      {May-July 2014}
+      {Research Intern}
+      {\textsc{Microsoft Research India}, Bangalore}
+      {}
       {
-         \begin{itemize}[leftmargin=*]
+         \begin{itemize}[leftmargin=0.5cm]
              \item Analysed the implementations of different distributed systems and databases architectures like
                  \textbf{Google MapReduce}, \textbf{Google FileSystem}, \textbf{Google MillWheel} \textbf{Yahoo! PNUTS},
                  \textbf{Amazon DynamoDB}, \textbf{Apache Kafka}, \textbf{Apache Spark}, \textbf{Apache Hadoop},
@@ -224,18 +227,21 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
          \end{itemize}
      }
 
-\work {May-July 2013}
-      {Software Development at \textsc{Aurus Networks'}, Bangalore}
-      {
-          \begin{itemize}[leftmargin=*]
-              \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks'
-                  MOOC offering --- to a technology agnostic \textbf{HTML5/JavaScript} web player leading
-                  to a uniform cross-platform viewing experience.
-              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework,
-                  for conversations during live lectures.
-              \item Engineered an extensible Jabber framework for real-time communications between different services.
-          \end{itemize}
-      }
+\cproject
+    {May-July 2013}
+    {Software Development Intern}
+    {\textsc{Aurus Networks'}, Bangalore}
+    {}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks'
+                MOOC offering --- to a technology agnostic \textbf{HTML5/JavaScript} web player leading
+                to a uniform cross-platform viewing experience.
+            \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework,
+                for conversations during live lectures.
+            \item Engineered an extensible Jabber framework for real-time communications between different services.
+        \end{itemize}
+    }
 
 %----------------------------------------------------------------------------------------
 %	SCHOLARSHIPS AND CONFERENCES
