--- a/cv.tex
+++ b/cv.tex
@@ -229,10 +229,12 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \section{Work Experience}
 
-\work {May-July 2014}
-      {Research Intern at \textsc{Microsoft Research India}, Bangalore}
-      {
-         \begin{itemize}[leftmargin=*]
+\lproject
+    {May-July 2014}
+    {Research Intern}
+    {\textsc{Microsoft Research India}, Bangalore}
+    {
+         \begin{itemize}[leftmargin=0.5cm]
              \item CScale provides a declarative distributed systems programming model using LINQ. A programmer with no distributed system
                  experience can specify the computation intent in LINQ and CScale handles scaling the system and fault tolerance.
              \item Analysed the implementations of different distributed systems and databases architectures like
@@ -249,16 +251,18 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
          \end{itemize}
      }
 
-\work {May-July 2013}
-      {Software Development at \textsc{Aurus Networks'}, Bangalore}
-      {
-          \begin{itemize}[leftmargin=*]
-              \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks' MOOC offering --- to a technology agnostic
-                  \textbf{HTML5/JavaScript} web player leading to a uniform cross-platform viewing experience.
-              \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework, for conversations during live lectures.
-              \item Engineered an extensible Jabber framework for real-time communications between different services.
-          \end{itemize}
-      }
+\lproject
+    {May-July 2013}
+    {Software Development Intern}
+    {\textsc{Aurus Networks'}, Bangalore}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Ported the legacy flash based web player in \textbf{CourseHub} --- Aurus Networks' MOOC offering --- to a technology agnostic
+                \textbf{HTML5/JavaScript} web player leading to a uniform cross-platform viewing experience.
+            \item Developed a \textbf{XMPP} based \textbf{real-time chat service} using Jabber framework, for conversations during live lectures.
+            \item Engineered an extensible Jabber framework for real-time communications between different services.
+        \end{itemize}
+    }
 
 %----------------------------------------------------------------------------------------
 %  COURSE PROJECTS
