Made sure that the 3 page is a strict subset of master

--- a/cv.tex
+++ b/cv.tex
@@ -494,6 +494,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                       of a Student Wiki, Forums, Community Search, Calendar and Lost and Found.
                   \item Developed the Lost and Found module using \textbf{Drupal} for VANI.
                   \item Conducted sessions on the extending VANI to create rich applications.
+                  \item Developed the Lost and Found module using \textbf{Drupal}
+                      and conducted sessions on the extending VANI to create rich applications.
               \end{itemize}
           }
 
@@ -670,6 +672,9 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                    \item Worked as a English tutor in the pilot programme to help under-privileged students from and around IIT Kanpur campus.
                    \item Organized the second phase of the programme, aimed at school teachers by meetings principals from schools in and
                        around IIT Kanpur.
+                   \item Worked as a English tutor in the pilot English Proficiency Programme to help
+                       under-privileged students obtain a functional knowlege of English; and helped in the
+                       conduction of second phase of the project aimed at school teachers in nearby schools.
                \end{itemize}
           }
 
@@ -693,6 +698,11 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                        via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
                    \item Organized a Respect March on the 15$^{th}$ of August in honour of the sacrifices made by our
                        freedom fighters and to instil patriotism in the residents of IIT Kanpur.
+                   \item Organized a blood donation camp for the residents of IIT Kanpur to promote awarness
+                       about road accidents.  Mobilized information about road safety through infographics and questionnaires
+                       via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
+                   \item Organized a Respect March on the 15$^{th}$ of August, to infuse a sense of patriotism
+                       on the occassion of Indian Independence day.
                \end{itemize}
           }
 
