Tryin out share latex

--- a/cv.tex
+++ b/cv.tex
@@ -1,6 +1,7 @@
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
+% !TEX program = xelatex
 
 \documentclass[a4paper,10pt]{article} % Default font size and paper size
 
