--- a/cv.tex
+++ b/cv.tex
@@ -92,7 +92,7 @@
 }
 
 \newcommand{\itemlist}[1]{
-    \begin{tabular}{>{\raggedleft}p{1.5cm}p{0.9\linewidth}}
+    \begin{tabular}{>{\raggedleft}p{1.7cm}p{0.9\linewidth}}
         #1
     \end{tabular}
 }
@@ -201,6 +201,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     \textsc{Dec 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{Dec 2008}    & Secured All India Rank 297 in FIITJEE Talent Reward Examination. \\
     \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
+    \textsc{2005, 2009}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
                             2$^{nd}$ to 12$^{th}$ grade. \\
     \textsc{---}         & Achieved AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympiad.\\
@@ -601,8 +602,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
-                       which is responsible for all the student activities of the institute.
+                   \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with
+                       suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
                    \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
                    \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
