Changed GRC Info

--- a/cv.tex
+++ b/cv.tex
@@ -536,8 +536,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
           {Member, Gymkhana Review Committee (GRC)}
           {
                \begin{itemize}[leftmargin=0.5cm]
-                   \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
-                       which is responsible for all the student activities of the institute.
+                   \item The GRC, a standing committee of the Students' Senate of IIT Kanpur was mandated with
+                       suggesting changes to the existing structure of the Students' Gymkhana, IIT Kanpur.
                    \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
                    \item Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
                \end{itemize}
