--- a/cv.tex
+++ b/cv.tex
@@ -591,10 +591,9 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                \begin{itemize}[leftmargin=0.5cm]
                    \item Overhauled the methodology of inviting colleges all around the country by calling college societies over college cultural unions.
                    \item Worked with a team of five fellow coordinators in planning the accommodation of 1500 participants.
-                   \item Charted the logistics for the hospitality of \textbf{1500 participants}.
-                   \item Chalked out the logistics of the hospitality and accommodation of \textbf{1500 participants} with my fellow coordinators.
-                   \item Helmed a team of 40 secretaries and 80 volunteers tasked with ensuring a flawless conduction of the festival.
-                   \item Handled security during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
+                   \item Chalked out the logistics of hospitality and accommodation of \textbf{1500 participants} with four other coordinators.
+                   \item Managed a team of 40 secretaries and 80 volunteers, over a span of 8 months and ensured a flawless conduction of the festival.
+                   \item Handled security arrangements during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
                \end{itemize}
           }
 
