--- a/cv.tex
+++ b/cv.tex
@@ -579,6 +579,7 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                     \item Oversaw the hospitality arrangements of the 1800 participants.
                     \item Initiated and organized Mr. \& Ms. Fresher's competition as an Antaragni Initiative for the freshmen.
                     \item Introduced Choreo Nite to the arsenal of competitions held in Antaragni.
+                    \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
                     \item Promoted Road Safety as a part of the social campaign of Antaragni -- Zara Sambhal Ke by conducting
                         public polls and spreading general awareness about the same.
                     \item Publicized Antaragni on social media platforms by contributing creative content.
