--- a/cv.tex
+++ b/cv.tex
@@ -514,8 +514,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                         non-monetary incentives to the outstanding cultural performers in Antaragni under the banner
                         of \textbf{Dream On} campaign.
                     \item Coordinated the conduction of fifty competitions and nine major events with a team comprising of over
+                    \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
                         thousand volunteers.
-                    \item Initiated and organized Mr. \& Ms. Fresher's; and Choreo Nite to the arsenal of competitions
                         held in Antaragni.
                     \item Publicized Antaragni on social media platforms by contributing creative content.
                \end{itemize}
