--- a/cv.tex
+++ b/cv.tex
@@ -480,6 +480,8 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                          \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
                      \item \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
                          \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
+                     \item \textbf{Junoon '14}: Eastern Band Competition, Antaragni '14.
+                         \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}
                  \end{itemize}
              }
 
