Reduced margins and removed unnecessary content

--- a/cv.tex
+++ b/cv.tex
@@ -35,7 +35,7 @@
 % PAGE GEOMETRY
 %----------------------------------------------------------------------------------------
 
-\usepackage[top=1cm, bottom=0.5cm, lmargin=0.5cm, rmargin=1.3cm]{geometry} % The page Geometry
+\usepackage[top=0.3cm, bottom=0.3cm, lmargin=0.5cm, rmargin=1.3cm]{geometry} % The page Geometry
 
 %----------------------------------------------------------------------------------------
 % CUSTOM ENVIRONMENTS
@@ -271,7 +271,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
     \textsc{May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
     \textsc{Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
     \textsc{2009, 2005}  & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
-    \textsc{Dec 2008}    & Secured All India Rank 297 in FIITJEE Talent Reward Examination. \\
     \textsc{2000-2009}   & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic performance throughout
                             2$^{nd}$ to 12$^{th}$ grade. \\
 }
@@ -417,73 +416,57 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 %----------------------------------------------------------------------------------------
 \section{Independent Projects}
 
-\siproject {July 2014}
-          {OARS}
-          {
-              Scraped the institute academic records to create a database of all courses offered by the institute to create an
-              AngularJS based course search over the existing legacy course search.  \href{https://navya.github.io/oars}{[Website]}
-           }
+\siproject
+    {\href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{[Documentation]} }
+    {GNU/Linux Exploration, Programming Club, IIT Kanpur}
+    {
+        Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
+      process management, memory management, shell interface etc to serve as a reference for the
+      Student Community.
+    }
 
-\siproject {March 2014}
-          {Get Your Personal Homepage (GYPH)}
-          {
-               Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a WYSIWG website
-               editor.  \href{http://gyph2.herokuapp.com/} {[Website]}
-           }
+\siproject
+    {\href{https://navya.github.io/oars}{[Website]}}
+    {OARS}
+    { Scraped the institute academic records to create a database of all courses offered by the institute to create an AngularJS based course search over the existing legacy course search.  }
 
-\siproject {August 2013}
-           {ShuffleRun}
-           {
-               Pitched ShuffleRun --- a music player which selects tracks on the basis of the user's running speed;
-               recieved honourable mention at \textbf{Yahoo! HackU 2013}.  \href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}
-           }
+\siproject
+    {\href{https://github.com/srijanshetty/ShuffleRun} {[Repository]}}
+    {ShuffleRun}
+    { Pitched ShuffleRun, a music player which selects tracks on the basis of the user's running speed; recieved honourable mention at \textbf{Yahoo! HackU 2013}. }
 
-\siproject {Summer 2012}
-           {GNU/Linux Exploration, Programming Club, IIT Kanpur}
-           {
-              Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
-              process management, memory management, shell interface etc to serve as a reference for the
-              Student Community.
-              \href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{[Documentation]}
-           }
+\siproject
+    {\href{http://gyph2.herokuapp.com/} {[Website]}}
+    {Get Your Personal Homepage (GYPH)}
+    {Eased the process of creating minimalistic websites for not-so-tech-savvy students by creating a WYSIWG website editor. }
 
-\lproject {Summer 2012}
-          {Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur}
-          {Professor Manindra Agarwal, Professor T. V. Prabhakar}
-          {
-              \begin{itemize}[leftmargin=0.5cm]
-                  \item Conceptualized the idea of VANI - an extensible student community platform consisting
-                      of a Student Wiki, Forums, Community Search, Calendar and Lost and Found.
-                  \item Developed the Lost and Found module using \textbf{Drupal}
-                      and conducted sessions on the extending VANI to create rich applications.
-              \end{itemize}
-          }
+\projectlist
+    {Projects on Github}
+    {
+     \begin{itemize}[leftmargin=0.5cm]
+         \item \textbf{DS}: implementation of certain algorithms and data structures
+             \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
+         \item \textbf{Notes}: notes on computing and social sciences.
+             \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
+         \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
+             \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}
+         \item \textbf{Bash Scripts}: handy configurations and shortcuts for ZSH
+             \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
+     \end{itemize}
+    }
 
-\projectlist {Projects on Github}
-             {
-                 \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{DS}: implementation of certain algorithms and data structures
-                         \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}
-                     \item \textbf{Notes}: notes on computing and social sciences.
-                         \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}
-                     \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-                         \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}
-                     \item \textbf{Bash Scripts}: handy configurations and shortcuts for ZSH
-                         \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}
-                 \end{itemize}
-             }
-
-\projectlist {Web Development}
-             {
-                 \begin{itemize}[leftmargin=0.5cm]
-                     \item \textbf{Udghosh '13}: The annual sports-fest of IIT Kanpur.
-                         \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
-                     \item \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
-                         \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
-                     \item \textbf{Junoon '14}: Eastern Band Competition, Antaragni '14.
-                         \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}
-                 \end{itemize}
-             }
+\projectlist
+    {Web Development}
+    {
+     \begin{itemize}[leftmargin=0.5cm]
+         \item \textbf{Udghosh '13}: The annual sports-fest of IIT Kanpur.
+             \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}
+         \item \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
+             \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}
+         \item \textbf{Junoon '14}: Eastern Band Competition, Antaragni '14.
+             \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}
+     \end{itemize}
+    }
 
 %----------------------------------------------------------------------------------------
 %   OTHER SKILLS
@@ -518,7 +501,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
                     \item Initiated and organized Mr. \& Ms. Fresher's competition and introduced Chreo Night in Antaragni's arsenal of competitions.
                         thousand volunteers.
                         held in Antaragni.
-                    \item Publicized Antaragni on social media platforms by contributing creative content.
                \end{itemize}
           }
 
@@ -551,9 +533,6 @@ Programming Languages, Networks and Systems, Security, Web-Development, Natural 
 
 \skill {2010 -- 2011}
        {Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad).}
-
-\skill {2005 -- 2006}
-       {House Captain}
 
 %----------------------------------------------------------------------------------------
 %   COMMUNITY SERVICE
